--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 
 :root {
-
   font-family: "JetBrains Mono", monospace;
   // line-height: 1.5;
   // font-weight: 400;
@@ -20,7 +19,11 @@
 }
 
 body {
-  margin: 0 15%;
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
 
-
+#root {
+  margin: 0 15%;
+}
